@@ -1,0 +1,1 @@
+option('xwayland', type: 'feature', value: 'auto', description: 'Enable support for Xwayland')
